# scnu_rm

./: .gitmodules  README.md
LiangShuCheng/task3/: README.md
OpenCV/course/: CMakeLists.txt
OpenCV/course/src/chapter1/: EnableCamera.cpp  EnableImage.cpp  EnableVideo.cpp
OpenCV/course/src/chapter2/: BasicFunctions.cpp
OpenCV/course/src/chapter3/: ResizeAndCrop.cpp
OpenCV/course/src/chapter4/: DrawShapesAndText.cpp
OpenCV/course/src/chapter5/: WarpImage.cpp
OpenCV/course/src/chapter6/: ColorDetection.cpp
OpenCV/course/src/chapter7/: ShapesDetection.cpp
OpenCV/course/src/chapter8/: FaceDetection.cpp
OpenCV/course/src/project1/: ColorPicker.cpp  VirtualPaint.cpp
OpenCV/course/src/project2/: DocumentScanner.cpp
OpenCV/course/src/project3/: LicensePlateDetector.cpp
OpenCV/digital/: CMakeLists.txt
OpenCV/digital/src/: API.cpp  RotatedRect.cpp  approxPolyDP.cpp  binary.cpp  channel_demo.cpp  contours.cpp  demo.cpp  demo1.cpp  demo2.cpp  gray.cpp  learn_Mat.cpp  morphology.cpp
OpenCV/ros2_ws/install/: local_setup.sh  setup.sh
OpenCV/ros2_ws/install/opencv_use/lib/opencv_use/: my_opencv
OpenCV/ros2_ws/install/opencv_use/share/opencv_use/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
OpenCV/ros2_ws/log/: latest_build
OpenCV/ros2_ws/src/opencv_use/: CMakeLists.txt
OpenCV/ros2_ws/src/opencv_use/src/: my_opencv.cpp
OpenCV/task/: CMakeLists.txt
OpenCV/task/src/: t.cpp  tt.cpp
OpenCV/task/src/TJ-SuperPower/: armor_detect.cpp
OpenCV/task/src/mine/: armor_pose_estimation.cpp  color_detection.cpp  edge_contour_detection.cpp  main.cpp  pnp.cpp  solvePnP.cpp  solvepnp.cpp  task.cpp  temp.cpp  test.cpp
ROS2/chapter1/: hello_world.cpp  learn_path.txt
ROS2/chapter2/session2/: CMakeLists.txt
ROS2/chapter2/session3_ws/install/demo_cpp_pkg/share/demo_cpp_pkg/: package.sh
ROS2/chapter2/session3_ws/src/demo_cpp_pkg/src/: cpp_node.cpp  learn_functional.cpp  learn_lambda.cpp  learn_shared_ptr.cpp  person_node.cpp
ROS2/learn/chapter1/: CMakeLists.txt  a.out
ROS2/learn/chapter2/session1/: a.out  test_args.cpp
ROS2/learn/chapter2/session2/: ros2_cpp_node.cpp
ROS2/learn/chapter2/session3_ws/install/: local_setup.sh  setup.sh
ROS2/learn/chapter2/session3_ws/install/demo_cpp_pkg/share/demo_cpp_pkg/: package.xml
ROS2/learn/chapter2/session3_ws/log/: latest_build
ROS2/learn/chapter2/session3_ws/src/demo_cpp_pkg/: CMakeLists.txt
ROS2/learn/chapter2/session3_ws/src/demo_cpp_pkg/src/: cpp_node.cpp  learn_auto.cpp  learn_functional.cpp  learn_shared_ptr.cpp  person_node.cpp
ROS2/learn/chapter3/topic_ws/install/: local_setup.sh  setup.sh
ROS2/learn/chapter3/topic_ws/install/custom_interfaces/share/custom_interfaces/: local_setup.sh  package.sh  package.xml
ROS2/learn/chapter3/topic_ws/install/custom_interfaces/share/custom_interfaces/cmake/: rosidl_cmake-extras.cmake
ROS2/learn/chapter3/topic_ws/install/custom_interfaces/share/custom_interfaces/msg/: MyMessage.idl
ROS2/learn/chapter3/topic_ws/log/: latest_build
ROS2/learn/chapter3/topic_ws/src/custom_interfaces/: CMakeLists.txt
ROS2/learn/chapter3/topic_ws/src/custom_msg_nodes/: CMakeLists.txt
ROS2/learn/chapter3/topic_ws/src/custom_msg_nodes/src/: publisher.cpp  subscriber.cpp
ROS2/learn/chapter3/topic_ws/src/demo_turtlesim/: CMakeLists.txt
ROS2/learn/chapter3/topic_ws/src/demo_turtlesim/src/: turtle_circle.cpp  turtle_control.cpp
ROS2/learn/chapter3/topic_ws/src/example_topic/src/: topic_publisher.cpp  topic_subscribe.cpp
ROS2/learn/chapter4/service_ws/install/: local_setup.sh  setup.sh
ROS2/learn/chapter4/service_ws/log/: latest_build
ROS2/learn/chapter4/service_ws/src/demo_service/: CMakeLists.txt
ROS2/learn/chapter4/service_ws/src/demo_service/src/: patrol_client.cpp  turtle_control.cpp
ROS2/learn/chapter4/service_ws/src/service_interfaces/: CMakeLists.txt  package.xml
ROS2/learn/chapter4/service_ws/src/service_interfaces/srv/: Patrol.srv
ROS2/task/: livox.txt
ROS2/task/LiDAR_WS/install/: local_setup.sh  setup.sh
ROS2/task/LiDAR_WS/install/livox_ros_driver2/lib/livox_ros_driver2/: livox_ros_driver2_node
ROS2/task/LiDAR_WS/install/livox_ros_driver2/share/livox_ros_driver2/: package.sh
ROS2/task/LiDAR_WS/log/: latest_build
ROS2/task/cvtopic_ws/install/: local_setup.sh  setup.sh
ROS2/task/cvtopic_ws/install/opencv_video/lib/opencv_video/: test_ffmpeg  video_publisher  video_subscriber
ROS2/task/cvtopic_ws/install/opencv_video/share/opencv_video/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ROS2/task/cvtopic_ws/log/: latest_build
ROS2/task/cvtopic_ws/src/opencv_video/: CMakeLists.txt
ROS2/task/cvtopic_ws/src/opencv_video/src/: video_publisher.cpp  video_subscriber.cpp
ROS2/task/hik_camera_ws/install/: local_setup.sh  setup.sh
ROS2/task/hik_camera_ws/log/: latest_build
ROS2/task/livox_ws/install/: local_setup.sh  setup.sh
ROS2/task/livox_ws/log/: latest_build
ROS2/task/opencv_ws/install/: local_setup.sh  setup.sh
ROS2/task/opencv_ws/log/: latest_build
ROS2/task/opencv_ws/src/opencv_use/: CMakeLists.txt  package.xml
ROS2/task/opencv_ws/src/opencv_use/src/: my_opencv.cpp
ROS2/task/topic_ws/install/: local_setup.sh  setup.sh
ROS2/task/topic_ws/log/: latest_build
ROS2/task/topic_ws/src/example_topic/: CMakeLists.txt
ROS2/task/topic_ws/src/example_topic/src/: topic_publisher.cpp  topic_subscribe.cpp
cpluscplus/quickLook/: CMakeLists.txt
cpluscplus/quickLook/src/: designatedInit.cpp  template.cpp
cplusplus/quickLook/src/: lambda.cpp
cplusplus/task/task0/: CMakeLists.txt
cplusplus/task/task0/source/: Fibonacci.cpp  array.cpp  multiple.cpp  score.cpp  vector.cpp
cplusplus/task/task1/: CMakeLists.txt
cplusplus/task/task1/head/: add.hpp  ball.hpp
cplusplus/task/task1/source/: add.cpp  ball.cpp  main.cpp
cplusplus/task/task2/: CMakeLists.txt
cplusplus/task/task2/include/: Robot.h
cplusplus/task/task2/src/: Robot.cpp  main.cpp
driver/livox_ros_driver2_humble/: README.md
driver/livox_ros_driver2_humble/src/src/comm/: pub_handler.cpp
(+177 files in other folders)
