cmake_minimum_required(VERSION 3.11)
project(task)
find_package(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})

add_executable(test src/mine/test.cpp)
add_executable(temp src/mine/temp.cpp)
add_executable(main src/mine/main.cpp)
add_executable(task src/mine/task.cpp)
add_executable(pnp src/mine/pnp.cpp)
add_executable(solvepnp src/mine/solvepnp.cpp)
add_executable(armor_pose_estimation src/mine/armor_pose_estimation.cpp)
add_executable(color_detection src/mine/color_detection.cpp)
add_executable(edge_contour_detection src/mine/edge_contour_detection.cpp)
add_executable(armor_detect src/TJ-SuperPower/armor_detect.cpp)

target_link_libraries(test ${OpenCV_LIBS})
target_link_libraries(temp ${OpenCV_LIBS})
target_link_libraries(main ${OpenCV_LIBS})
target_link_libraries(task ${OpenCV_LIBS})
target_link_libraries(pnp ${OpenCV_LIBS})
target_link_libraries(solvepnp ${OpenCV_LIBS})
target_link_libraries(armor_pose_estimation ${OpenCV_LIBS})
target_link_libraries(color_detection ${OpenCV_LIBS})
target_link_libraries(edge_contour_detection ${OpenCV_LIBS})
target_link_libraries(armor_detect ${OpenCV_LIBS})